Replace dependency from local to Github-Packages

--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".VideoActivity">
 
+    <tv.mycujoo.mls.widgets.PlayerViewWrapper
+        android:id="@+id/playerViewWrapper"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_height="240dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
