Update to MLS version 1.0.1-alpha15

--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -7,8 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".VideoActivity">
 
-    <tv.mycujoo.mls.widgets.PlayerViewWrapper
-        android:id="@+id/playerViewWrapper"
+    <tv.mycujoo.mls.widgets.MLSPlayerView
+        android:id="@+id/playerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Play"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/playerViewWrapper" />
+        app:layout_constraintTop_toBottomOf="@id/playerView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
