Upgrade to latest version [1.0.2-alpha15]

--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -5,10 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/mainActivityRootLayout"
     tools:context=".VideoActivity">
 
     <tv.mycujoo.mls.widgets.MLSPlayerView
-        android:id="@+id/playerView"
+        android:id="@+id/mlsPlayerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,6 +25,6 @@
         android:text="Play"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/playerView" />
+        app:layout_constraintTop_toBottomOf="@id/mlsPlayerView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
