--- a/app/src/main/res/layout/activity_video_with_cast.xml
+++ b/app/src/main/res/layout/activity_video_with_cast.xml
@@ -6,7 +6,7 @@
     android:id="@+id/mainActivityRootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".VideoActivityWithCaster">
+    tools:context=".VideoActivityWithCast">
 
     <tv.mycujoo.mls.widgets.MLSPlayerView
         android:id="@+id/mlsPlayerView"
