Update mls package names

--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -8,7 +8,7 @@
     android:id="@+id/mainActivityRootLayout"
     tools:context=".VideoActivity">
 
-    <tv.mycujoo.mls.widgets.MLSPlayerView
+    <tv.mycujoo.mcls.widgets.MLSPlayerView
         android:id="@+id/mlsPlayerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
