--- a/app/src/main/res/layout/activity_video_with_cast.xml
+++ b/app/src/main/res/layout/activity_video_with_cast.xml
@@ -8,7 +8,7 @@
     android:layout_height="match_parent"
     tools:context=".VideoActivityWithCast">
 
-    <tv.mycujoo.mls.widgets.MLSPlayerView
+    <tv.mycujoo.mcls.widgets.MLSPlayerView
         android:id="@+id/mlsPlayerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
